--- a/scss/scsspages/_contact.scss
+++ b/scss/scsspages/_contact.scss
@@ -12,6 +12,11 @@
         .contimg {
             width: 200px;
             border-radius: 40px;
+
+            @media (max-width: 500px) {
+                width: 100%;
+
+            }
         }
     }
 
